--- a/key-form.html
+++ b/key-form.html
@@ -6,7 +6,11 @@
     </br-input>
     <br-textarea ng-show="model.needPem" br-model="model.key.publicKeyPem"
       br-options="{icon: 'key', name: 'publicKeyPem', label: 'Public Key PEM'}">
-      Enter the public key PEM data.
+      Enter the public key PEM data.  A public key can be generated using the
+      following commands:
+<pre>openssl genrsa -out mykey.pem 2048
+openssl rsa -in mykey.pem -pubout > mykey.pub</pre>
+      Paste the contents of the mykey.pub file here.
     </br-textarea>
   </fieldset>
 </form>
