Fix-up controller prefix.

--- a/key.html
+++ b/key.html
@@ -1,4 +1,4 @@
-<div class="ng-cloak" ng-controller="KeyController as model">
+<div class="ng-cloak" ng-controller="brKeyController as model">
   <div ng-show="model.key.label" class="row">
     <div class="col-md-12">
       <h1 class="headline" ng-bind="model.key.label"></h1>
