--- a/keys-view.html
+++ b/keys-view.html
@@ -1,4 +1,4 @@
-<div class="section section-keys" ng-controller="KeysController as model">
+<div class="section section-keys" ng-controller="brKeysController as model">
   <br-headline br-title="Keys" br-loading="model.state.loading">
     <ul class="stackable-menu dropdown-menu">
       <li ng-show="model.isOwner && !model.hideGenerate">
