Fix bad reference.

--- a/key-selector.html
+++ b/key-selector.html
@@ -7,9 +7,9 @@
   br-show-choices="$ctrl.showChoices">
   <br-selector-selected>
     <div>
-      <strong>{{selected.label}}</strong>
+      <strong>{{$ctrl.selected.label}}</strong>
       <br/>
-      <small>{{selected.id}}</small>
+      <small>{{$ctrl.selected.id}}</small>
     </div>
   </br-selector-selected>
   <br-selector-choices>
