--- a/key-selector.html
+++ b/key-selector.html
@@ -26,5 +26,5 @@
 <stackable-modal stackable="$ctrl.showAddModal"
   stackable-closed="!err && ($ctrl.selected=result)"
   br-lazy="$ctrl.showAddModal" br-lazy-id="br-key-selector-add-key-modal">
-  <br-generate-key-pair-modal></br-generate-key-pair-modal>
+  <br-generate-key-pair-modal br-identity="$ctrl.identity"></br-generate-key-pair-modal>
 </stackable-modal>
