Use angular element vs attribute markup.

--- a/keys-view.html
+++ b/keys-view.html
@@ -67,19 +67,19 @@
   </div>
   <stackable-modal stackable="model.modals.showGenerateKeyPair"
     br-lazy-compile="model.modals.showGenerateKeyPair" br-lazy-id="br-keys-view-generate-key-pair-modal">
-    <div br-generate-key-pair-modal
-      br-identity="model.identity"></div>
+    <br-generate-key-pair-modal
+      br-identity="model.identity"></br-generate-key-pair-modal>
   </stackable-modal>
   <stackable-modal stackable="model.modals.showAddKey"
     br-lazy-compile="model.modals.showAddKey" br-lazy-id="br-keys-view-add-key-modal">
-    <div br-add-key-modal
-      br-identity="model.identity"></div>
+    <br-add-key-modal
+      br-identity="model.identity"></br-add-key-modal>
   </stackable-modal>
   <stackable-modal stackable="model.modals.showEditKey"
     br-lazy-compile="model.modals.showEditKey" br-lazy-id="br-keys-view-edit-key-modal">
-    <div br-edit-key-modal
+    <br-edit-key-modal
       br-identity="model.identity"
-      br-key="model.modals.key"></div>
+      br-key="model.modals.key"></br-edit-key-modal>
   </stackable-modal>
 
   <!-- Revoking key alert -->
