Fix command formatting.

--- a/key-form-component.html
+++ b/key-form-component.html
@@ -13,7 +13,7 @@
         Enter the public key PEM data.  A public key can be generated using the
         following commands:
   <pre>openssl genrsa -out mykey.pem 2048
-  openssl rsa -in mykey.pem -pubout > mykey.pub</pre>
+openssl rsa -in mykey.pem -pubout &lt; mykey.pub</pre>
         Paste the contents of the mykey.pub file here.
       </br-textarea-help>
     </br-textarea>
